Bug 67684 - Saving to ODS loses text formatting.
Summary: Saving to ODS loses text formatting.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: Other All
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.2.0 target:4.1.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-08-02 20:09 UTC by Kohei Yoshida
Modified: 2013-08-05 20:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document (11.56 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-08-02 20:09 UTC, Kohei Yoshida
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2013-08-02 20:09:30 UTC
Created attachment 83553 [details]
Test document

1. Open the attached document.
2. Save it right away.
3. Reload the file.
4. The formatting of texts in Column B is gone.
Comment 1 Kohei Yoshida 2013-08-02 20:09:50 UTC
Confirming.
Comment 2 Joel Madero 2013-08-02 20:15:50 UTC
regressions yes?
Comment 3 CassieLX 2013-08-02 20:25:54 UTC
I confirm this bug. LibreOffice V4.1.0.4, WindowsXP SP3
Comment 4 Thomas van der Meulen [retired] 2013-08-02 20:36:11 UTC
Thank you for your bug report, I can reproduce this bug running LibreOffice Version: 4.1.0.4
Build ID: 89ea49ddacd9aa532507cbf852f2bb22b1ace28 on Mac osx 10.8.4. 


I also can reproduce this bug in LibreOffice 4.1 beta 1 
I can't reproduce this bug in 4.0.4.2 so a regression
Comment 5 m_a_riosv 2013-08-02 22:11:08 UTC
Reproducible also
Win7x64i3Ultimate
Version: 4.2.0.0.alpha0+Build ID: 43dbc8088ba6f4f51ca455b1af41251d69befe86
TinderBox: Win-x86@6-debug, Branch:master, Time: 2013-08-01_23:50:31

In master retains the row heigh.
Comment 6 Kohei Yoshida 2013-08-02 22:29:57 UTC
I'm taking it.
Comment 7 Kohei Yoshida 2013-08-02 22:35:36 UTC
Found a fix.  It was in a very unexpected place.
Comment 8 Kohei Yoshida 2013-08-03 00:01:47 UTC
4.1 backport request: https://gerrit.libreoffice.org/#/c/5263/
Comment 9 Commit Notification 2013-08-03 00:03:17 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7b319cb9c11bb0f0100c16b6268e580a1d6e64aa

fdo#67684: Store imported text style entries, else they won't get exported.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Thomas van der Meulen [retired] 2013-08-03 06:34:11 UTC
I can confirm that it is fixed in master 
Version: 4.2.0.0.alpha0+
Build ID: 7b319cb9c11bb0f0100c16b6268e580a1d6e64aa
TinderBox: MacOSX-X86_64@43, Branch:master, Time: 2013-08-02_23:56:16
os: mac osx 10.8.4
Comment 11 Commit Notification 2013-08-05 16:00:45 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=09a8fb1d90964d51d93a7e23a8d4af832fa614af&h=libreoffice-4-1

fdo#67684: Store imported text style entries, else they won't get exported.


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Kohei Yoshida 2013-08-05 20:09:22 UTC
Fixed.