fdo#67684: Store imported text style entries, else they won't get exported.

Change-Id: Id784772e677e176622e75ff5ae33ab3eb78b1d9a